--- a/package.json
+++ b/package.json
@@ -11,34 +11,35 @@
     "types": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@nabla/vite-plugin-eslint": "^1.5.0",
+    "@nabla/vite-plugin-eslint": "^2.0.2",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "^18.15.3",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "@vitejs/plugin-react-swc": "^3.2.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "@types/node": "^20.11.16",
+    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.53",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "autoprefixer": "^10.4.17",
+    "classnames": "^2.5.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "^3.10.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "0.2.8",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^5.0.2",
-    "vite": "^4.2.0",
-    "vite-plugin-svgr": "^3.0.0",
-    "vite-tsconfig-paths": "^4.0.7"
+    "eslint-plugin-tailwindcss": "^3.14.1",
+    "eslint": "^8.56.0",
+    "postcss": "^8.4.33",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vite": "^5.0.12",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
