--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-tailwindcss": "^3.14.2",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
+    "prettier-plugin-classnames": "^0.5.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
