--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint --fix .",
+    "lint:fix": "npm run lint --fix .",
     "types": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
