--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "npm run lint --fix .",
+    "lint:fix": "npm run lint --fix",
     "types": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
@@ -63,8 +63,6 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4",
     "vite": "^5.2.8",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "yarn-upgrade-all": "^0.7.2"
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
